public interface Secretaria {

    public Double montoTotal();

}
